--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <img src="images/cat.jpg" alt="slideshow image" id="myimage">
   </div>
 
-  <p id="links"><a href="#" id="previous">previous</a> --- <a href="#" id="next">next</a></p>
+  <p id="links"><button id="previous">PREVIOUS</a>  <button id="next">NEXT</a></p>
 
 </body>
 
